<resources>
    <string name="IJK_DECODE">1</string>
    <string name="MOVIE_4K">4K</string>
    <string name="MOVIE_ZB">少儿</string>
    <string name="N_A">N/A</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_info_recover">恢复出厂值</string>
    <string name="about_setting_info_without">无</string>
    <string name="about_update_text">检测更新</string>
    <string name="action_settings">Settings</string>
    <string name="alert_record">追剧记录</string>
    <string name="app_downlond">商城功能暂未开放...</string>
    <string name="app_downlond_no_ok">文件还没下载完成，请耐心等待</string>
    <string name="app_name">风帆影视</string>
    <string name="app_store">应用中心</string>
    <string name="author">HaiXin</string>
    <string name="bit_rate">bit_rate</string>
    <string name="clear">清除</string>
    <string name="clear_all">全部清除</string>
    <string name="close">Close</string>
    <string name="code">验证码</string>
    <string name="collection_record">收藏记录</string>
    <string name="comic">动漫</string>
    <string name="def_date">"1月1日
星期一"</string>
    <string name="def_time">08:00</string>
    <string name="default_wifi_ap_pass">shenma123</string>
    <string name="details_recommend">推荐观看</string>
    <string name="display_mode_time_out_desc">在 %1$d 秒之后，将会恢复原有设置，是否确定保存当前设置</string>
    <string name="display_mode_time_out_title">确认修改</string>
    <string name="display_setting_ntsc">NTSC</string>
    <string name="display_setting_pal">PAL</string>
    <string name="display_setting_resolution">分辨率</string>
    <string name="display_setting_zoom">屏幕缩放</string>
    <string name="display_setting_zoom_bottom_String">按返回鍵应用设置并返回</string>
    <string name="display_setting_zoom_oncutoff_String">选择方向键点击OK后使用上下左右键调整缩放比例</string>
    <string name="diy" />
    <string name="diy_theme">更换主题</string>
    <string name="diy_tvstation">个性背景</string>
    <string name="documentary">韩剧</string>
    <string name="empower">扫码登录</string>
    <string name="empower_text">确定</string>
    <string name="eth_connect">有线网络已经连接上了</string>
    <string name="exit">Exit</string>
    <string name="exitdialog_back">再看会儿</string>
    <string name="exitdialog_out">退出</string>
    <string name="exitdialog_qin">亲！</string>
    <string name="exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="exo_controls_hide">Hide player controls</string>
    <string name="exo_controls_next_description">Next</string>
    <string name="exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="exo_controls_overflow_show_description">Show additional settings</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_playback_speed">Speed</string>
    <string name="exo_controls_playback_speed_normal">Normal</string>
    <string name="exo_controls_previous_description">Previous</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_seek_bar_description">Playback progress</string>
    <string name="exo_controls_settings_description">Settings</string>
    <string name="exo_controls_show">Show player controls</string>
    <string name="exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="exo_controls_time_placeholder">00:00:00</string>
    <string name="exo_controls_vr_description">VR mode</string>
    <string name="exo_download_completed">Download completed</string>
    <string name="exo_download_description">Download</string>
    <string name="exo_download_downloading">Downloading</string>
    <string name="exo_download_failed">Download failed</string>
    <string name="exo_download_notification_channel_name">Downloads</string>
    <string name="exo_download_removing">Removing downloads</string>
    <string name="exo_item_list">%1$s, %2$s</string>
    <string name="exo_track_bitrate">%1$.2f Mbps</string>
    <string name="exo_track_mono">Mono</string>
    <string name="exo_track_resolution">%1$d × %2$d</string>
    <string name="exo_track_role_alternate">Alternate</string>
    <string name="exo_track_role_closed_captions">CC</string>
    <string name="exo_track_role_commentary">Commentary</string>
    <string name="exo_track_role_supplementary">Supplementary</string>
    <string name="exo_track_selection_auto">Auto</string>
    <string name="exo_track_selection_none">None</string>
    <string name="exo_track_selection_title_audio">Audio</string>
    <string name="exo_track_selection_title_text">Text</string>
    <string name="exo_track_selection_title_video">Video</string>
    <string name="exo_track_stereo">Stereo</string>
    <string name="exo_track_surround">Surround sound</string>
    <string name="exo_track_surround_5_point_1">5.1 surround sound</string>
    <string name="exo_track_surround_7_point_1">7.1 surround sound</string>
    <string name="exo_track_unknown">Unknown</string>
    <string name="forget_password">找回密码</string>
    <string name="forget_password_tisp">找回密码</string>
    <string name="fps">fps</string>
    <string name="hello_world">Hello world!</string>
    <string name="illegal_password">密码不合标准，要求8位以上数字或英文</string>
    <string name="image_cache">图片缓存</string>
    <string name="input_password">最低6位禁止汉字</string>
    <string name="input_phone">请输入已绑定的邮箱</string>
    <string name="input_phones">请输入绑定邮箱</string>
    <string name="input_pwd">请输入类目密码</string>
    <string name="input_so">请输入搜索项</string>
    <string name="input_username">字母或数字最低6位</string>
    <string name="input_wifi_ap_name">ShenmaTvAP</string>
    <string name="ip">IP</string>
    <string name="ip_error_info">输入网络信息不合法</string>
    <string name="ip_set_succes">IP设置成功</string>
    <string name="ip_tips">"注意：采用NAT网络模式的设备（比如小米2），
上面显示的连接会是http://10.0.2.15:10101，
连接时把10.0.2.15替换成wifi或有线网络的IP地址。"</string>
    <string name="is_loading" />
    <string name="is_registing">正在注册...</string>
    <string name="load_cost">load-cost</string>
    <string name="load_err">加载数据失败</string>
    <string name="load_msg">精彩节目，马上就有</string>
    <string name="loading_live">检测网络或按左右键切换源</string>
    <string name="loading_tv">按菜单或ok键选择节目单</string>
    <string name="logout_msg">您已登录，是否注销？</string>
    <string name="media_information">Media Information</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_language">Language</string>
    <string name="mi_length">Length</string>
    <string name="mi_media">Media</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_player">Player</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="movie">电影</string>
    <string name="my_app_bottom_txt">菜单更多设置</string>
    <string name="my_app_native_app">本地应用</string>
    <string name="network_configuration_failed">网络配置失败</string>
    <string name="network_configuration_succeed">网络配置成功</string>
    <string name="network_disconnect">网络断开</string>
    <string name="recommend">热门推荐</string>
    <string name="recommends">推荐</string>
    <string name="settings">我的设置</string>
    <string name="teach">美剧</string>
    <string name="time_colon">:</string>
    <string name="tv_show">综艺</string>
    <string name="tvplay">电视剧</string>
    <string name="video_type">精选专题</string>
</resources>