<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:id="@id/fl_main" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/home_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:scaleType="fitCenter" android:adjustViewBounds="true" />
        <ImageView android:background="@drawable/text_bg_" android:layout_width="fill_parent" android:layout_height="@dimen/sm_80" />
        <RelativeLayout android:id="@id/rl_bg" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:id="@id/home_top_search" android:background="@drawable/selector_top_bar_focus_item_bg" android:paddingRight="@dimen/sm_10" android:focusable="true" android:focusableInTouchMode="true" android:nextFocusLeft="@id/rb_bm_tvplay" android:nextFocusRight="@id/home_top_record" android:layout_width="@dimen/sm_110" android:layout_height="@dimen/sm_45" android:layout_marginTop="@dimen/sm_48" android:layout_marginRight="@dimen/sm_20" android:src="@drawable/home_top_icon_search" android:scaleType="fitXY" android:layout_toLeftOf="@id/home_top_record" />
            <ImageView android:id="@id/home_top_record" android:background="@drawable/selector_top_bar_focus_item_bg" android:paddingRight="@dimen/sm_10" android:focusable="true" android:nextFocusLeft="@id/home_top_search" android:nextFocusRight="@id/home_user_center" android:nextFocusDown="@id/rb_bm_tvplay" android:layout_width="@dimen/sm_110" android:layout_height="@dimen/sm_45" android:layout_marginTop="@dimen/sm_48" android:layout_marginRight="@dimen/sm_20" android:src="@drawable/home_top_icon_record" android:scaleType="fitXY" android:layout_toLeftOf="@id/home_user_center" />
            <ImageView android:id="@id/home_user_center" android:background="@drawable/selector_top_bar_focus_item_bg" android:paddingRight="@dimen/sm_10" android:focusable="true" android:nextFocusRight="@id/rb_bm_tvplay" android:nextFocusDown="@id/rb_bm_tvplay" android:layout_width="@dimen/sm_200" android:layout_height="@dimen/sm_45" android:layout_marginTop="@dimen/sm_48" android:layout_marginRight="@dimen/sm_30" android:src="@drawable/home_foot_icon_01" android:scaleType="fitXY" android:layout_alignParentRight="true" />
            <ImageView android:id="@id/iv_net_state" android:visibility="gone" android:layout_width="@dimen/sm_35" android:layout_height="@dimen/sm_35" android:layout_marginLeft="@dimen/sm_230" android:layout_marginTop="@dimen/sm_28" android:layout_marginRight="@dimen/sm_30" android:src="@drawable/wifi" />
            <LinearLayout android:id="@id/gonggao_root" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <ImageView android:layout_width="@dimen/sm_38" android:layout_height="@dimen/sm_38" android:layout_marginLeft="@dimen/sm_300" android:layout_marginTop="@dimen/sm_8" android:layout_marginRight="@dimen/sm_10" android:src="@drawable/gonggao" />
                <com.shenma.tvlauncher.view.AlwaysMarqueeTextView android:textSize="@dimen/sm_25" android:textColor="@color/white" android:ellipsize="marquee" android:id="@id/gonggao" android:paddingLeft="0.0dip" android:paddingRight="0.0dip" android:layout_width="@dimen/sm_600" android:layout_height="@dimen/sm_35" android:layout_marginTop="@dimen/sm_8" android:layout_marginRight="@dimen/sm_30" android:text="" android:singleLine="true" android:marqueeRepeatLimit="marquee_forever" />
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:id="@id/main" android:layout_width="wrap_content" android:layout_height="@dimen/sm_76" android:layout_marginLeft="@dimen/sm_985" android:layout_alignParentTop="true">
                <RelativeLayout android:layout_gravity="center_vertical" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
                    <TextView android:textSize="@dimen/sm_25" android:textStyle="normal" android:id="@id/tv_main_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/def_time" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
                    <TextView android:textSize="@dimen/sm_25" android:textColor="#ff999999" android:gravity="center" android:id="@id/time_colon" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxHeight="@dimen/sm_76" android:text="@string/time_colon" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
                </RelativeLayout>
                <ImageView android:id="@id/iv_main_line" android:visibility="gone" android:layout_width="@dimen/sm_25" android:layout_height="@dimen/sm_50" android:src="@drawable/home_line" />
                <TextView android:textSize="@dimen/sm_18" android:id="@id/tv_main_date" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/def_date" />
                <ImageView android:id="@id/logo" android:visibility="gone" android:layout_width="@dimen/sm_152" android:layout_height="@dimen/sm_45" android:src="@drawable/sm_logo" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/ll_rb" android:paddingLeft="@dimen/sm_185" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="@dimen/sm_50" android:layout_marginTop="@dimen/sm_20" android:layout_below="@id/main">
                <RadioGroup android:orientation="horizontal" android:id="@id/title_group" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <RadioButton android:gravity="center" android:id="@id/rb_recommend" android:focusable="true" android:nextFocusLeft="@id/rb_settings" android:nextFocusRight="@id/rb_Internet" android:nextFocusDown="@id/iv_re_0" android:layout_width="0.0px" android:layout_height="wrap_content" android:button="@null" android:text="@string/recommend" android:layout_weight="0.5" style="@style/TitleButton" />
                    <RadioButton android:gravity="center" android:id="@id/rb_Internet" android:focusable="true" android:nextFocusLeft="@id/rb_recommend" android:nextFocusRight="@id/rb_video_type" android:nextFocusDown="@id/topic_iv_0" android:layout_width="0.0px" android:layout_height="wrap_content" android:button="@null" android:text="@string/video_type" android:layout_weight="0.5" style="@style/TitleButton" />
                    <RadioButton android:gravity="center" android:id="@id/rb_video_type" android:focusable="true" android:nextFocusLeft="@id/rb_Internet" android:nextFocusRight="@id/rb_recommend" android:layout_width="0.0px" android:layout_height="wrap_content" android:button="@null" android:text="@string/settings" android:layout_weight="0.5" style="@style/TitleButton" />
                </RadioGroup>
                <ImageView android:id="@id/iv_titile" android:layout_width="@dimen/sm_120" android:layout_height="@dimen/sm_10" android:layout_marginLeft="@dimen/sm_125" android:layout_marginBottom="@dimen/sm_2" android:src="@drawable/titile_top" android:layout_alignParentBottom="true" />
            </LinearLayout>
            <androidx.viewpager.widget.ViewPager android:id="@id/pager" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sm_4" android:layout_below="@id/rg_video_type_bottom" />
            <RadioGroup android:orientation="horizontal" android:id="@id/rg_video_type_bottom" android:layout_width="fill_parent" android:layout_height="@dimen/sm_60" android:layout_marginLeft="@dimen/sm_43" android:layout_marginTop="@dimen/sm_10" android:layout_marginRight="@dimen/sm_42" android:layout_marginBottom="@dimen/sm_15" android:layout_below="@id/main">
                <RadioButton android:id="@id/rb_bm_recommend" android:background="@drawable/button_focus" android:paddingLeft="@dimen/sm_35" android:focusable="false" android:nextFocusLeft="@id/rb_bm_tvplay" android:layout_width="@dimen/sm_120" android:layout_height="@dimen/sm_60" android:button="@null" android:text="@string/recommends" style="@style/bottom_TitleButton" />
                <RadioButton android:id="@id/rb_bm_tvplay" android:background="@drawable/button_focus" android:paddingLeft="@dimen/sm_20" android:focusable="true" android:nextFocusLeft="@id/rb_bm_tvplay" android:layout_width="wrap_content" android:layout_height="@dimen/sm_60" android:button="@null" android:text="@string/tvplay" android:paddingEnd="@dimen/sm_20" style="@style/bottom_TitleButton" />
                <RadioButton android:id="@id/rb_bm_movice" android:background="@drawable/button_focus" android:paddingLeft="@dimen/sm_20" android:focusable="true" android:layout_width="wrap_content" android:layout_height="@dimen/sm_60" android:button="@null" android:text="@string/movie" android:paddingEnd="@dimen/sm_20" style="@style/bottom_TitleButton" />
                <RadioButton android:id="@id/rb_bm_tv_show" android:background="@drawable/button_focus" android:paddingLeft="@dimen/sm_20" android:focusable="true" android:layout_width="wrap_content" android:layout_height="@dimen/sm_60" android:button="@null" android:text="@string/tv_show" android:paddingEnd="@dimen/sm_20" style="@style/bottom_TitleButton" />
                <RadioButton android:id="@id/rb_bm_comic" android:background="@drawable/button_focus" android:paddingLeft="@dimen/sm_20" android:focusable="true" android:layout_width="wrap_content" android:layout_height="@dimen/sm_60" android:button="@null" android:text="@string/comic" android:paddingEnd="@dimen/sm_20" style="@style/bottom_TitleButton" />
                <RadioButton android:id="@id/rb_bm_teach" android:background="@drawable/button_focus" android:paddingLeft="@dimen/sm_20" android:focusable="true" android:layout_width="wrap_content" android:layout_height="@dimen/sm_60" android:button="@null" android:text="@string/teach" android:paddingEnd="@dimen/sm_20" style="@style/bottom_TitleButton" />
                <RadioButton android:id="@id/rb_bm_documentary" android:background="@drawable/button_focus" android:paddingLeft="@dimen/sm_20" android:focusable="true" android:layout_width="wrap_content" android:layout_height="@dimen/sm_60" android:button="@null" android:text="@string/documentary" android:paddingEnd="@dimen/sm_20" style="@style/bottom_TitleButton" />
                <RadioButton android:id="@id/rb_bm_MOVIE_4K" android:background="@drawable/button_focus" android:paddingLeft="@dimen/sm_20" android:focusable="true" android:layout_width="wrap_content" android:layout_height="@dimen/sm_60" android:button="@null" android:text="@string/MOVIE_4K" android:paddingEnd="@dimen/sm_20" style="@style/bottom_TitleButton" />
                <RadioButton android:id="@id/rb_bm_MOVIE_ZB" android:background="@drawable/button_focus" android:paddingLeft="@dimen/sm_20" android:focusable="true" android:layout_width="wrap_content" android:layout_height="@dimen/sm_60" android:button="@null" android:text="@string/MOVIE_ZB" android:paddingEnd="@dimen/sm_20" style="@style/bottom_TitleButton" />
            </RadioGroup>
            <RelativeLayout android:gravity="center" android:id="@id/notice" android:background="@android:color/transparent" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_centerInParent="true">
                <ImageView android:id="@id/notice_iamge_url" android:layout_width="@dimen/sm_750" android:layout_height="@dimen/sm_500" android:scaleType="fitXY" android:layout_centerInParent="true" />
                <TextView android:textSize="@dimen/sm_20" android:textColor="@color/white" android:id="@id/notice_button" android:background="@drawable/button_1" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/sm_10" android:layout_marginBottom="@dimen/sm_10" android:text="返回键关闭" android:layout_alignRight="@id/notice_iamge_url" android:layout_alignBottom="@id/notice_iamge_url" />
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>
    <TextView android:textSize="@dimen/sm_18" android:textColor="@color/detail_point" android:layout_gravity="center_horizontal" android:id="@id/tv_update_msg" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/sm_80" />
</FrameLayout>